# blender-mcp

./: CHANGELOG.md  LICENSE  README.md  __init__.py  addon.py  blender_manifest.toml  common.py  pyproject.toml
.github/workflows/: release.yml
addons/blender_mcp_addon/: __init__.py  blender_manifest.toml  common.py  operators.py  panel.py  preferences.py  server.py
addons/blender_mcp_addon/integrations/: hunyuan3d.py  hyper3d.py  polyhaven.py
blender_mcp/: server.py
integrations/: __init__.py  sketchfab.py
src/blender_mcp_addon/: __init__.py  blender_manifest.toml  operators.py  preferences.py  server.py  state.py
