[project]
name = "chibifire-blender-mcp"
version = "2.0.0"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "K. S. Ernest (iFire) Lee", email = "ernest.lee@chibifire.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["blender_mcp*"]
exclude = ["blender_mcp_addon*"]

[project.urls]
"Homepage" = "https://github.com/chibifire/chibifire-blender-mcp"
"Bug Tracker" = "https://github.com/chibifire/chibifire-blender-mcp/issues"
