[project]
name = "chibifire-blender-mcp"
version = "2.0.1"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "K. S. Ernest (iFire) Lee", email = "ernest.lee@chibifire.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["blender_mcp"]

[project.urls]
"Homepage" = "https://github.com/chibifire/chibifire-blender-mcp"
"Bug Tracker" = "https://github.com/chibifire/chibifire-blender-mcp/issues"
